--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,8 +1,8 @@
 [supervisord]
 nodaemon=true
-logfile=/var/log/supervisor/supervisord.log
-logfile_maxbytes=50MB
-logfile_backups=10
+logfile=/dev/stdout            ; Direct supervisord log to standard out
+logfile_maxbytes=0             ; Disable log file rotation
+loglevel=info                  ; Info log level
 
 [program:xvfb]
 command=/usr/bin/Xvfb :1 -screen 0 1280x720x24
@@ -22,6 +22,7 @@ directory=/app
 autostart=true
 autorestart=true
 priority=300
+logfile=/dev/stdout  
 
 [program:cloudflared]
 command=/usr/local/bin/cloudflared access tcp --hostname proxy.marketa.id --url localhost:8082
